--- a/files/index.html
+++ b/files/index.html
@@ -1,6 +1,7 @@
 <html>
 <h1>Hello Yamini Lok</h1>
-<h2>veera venkata narayana bala tripura sundari sai yamini</h2>
+<h3>veera venkata narayana bala tripura sundari sai yamini</h3>
 <p>MINI World</p>
 <h3>It is a development server</h3>
+<p>by Urs Lok</p>
 </html>
